--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/lfurzewaddock/js-tdd-kit.git"
   },
-  "keywords": [ 
+  "keywords": [
     "ES6",
     "TDD",
     "JavaScript",
@@ -20,11 +20,19 @@
     "Webpack",
     "Babel",
     "Istanbul",
-    "ESLint"],
+    "ESLint"
+  ],
   "author": "Leo Furze-Waddock <leo@furze-waddock.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lfurzewaddock/js-tdd-kit/issues"
   },
-  "homepage": "https://github.com/lfurzewaddock/js-tdd-kit#readme"
+  "homepage": "https://github.com/lfurzewaddock/js-tdd-kit#readme",
+  "devDependencies": {
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
+  }
 }
