--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "ES6 TDD starter kit with Webpack, Babel, ESLint, Testem, Tape, jsdom and Istanbul",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devBuild": "node_modules/.bin/webpack --config webpack/dev",
+    "devWatch": "npm run devBuild -- --watch",
+    "devStart": "node_modules/.bin/webpack-dev-server --config webpack/dev --open",
+    "proBuild": "node_modules/.bin/webpack --config webpack/prod"
   },
   "repository": {
     "type": "git",
@@ -29,10 +33,16 @@
   },
   "homepage": "https://github.com/lfurzewaddock/js-tdd-kit#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "html-webpack-plugin": "^3.0.6",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "3.11.0",
+    "webpack-dev-server": "2.11.1",
+    "webpack-merge": "^4.1.2"
   }
 }
