--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "no-var": "off",
     "quotes": ["error", "double"],
     "prefer-arrow-callback": [ "error", { "allowNamedFunctions": true } ],
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./test/**/*.js", "./webpack/**/*.js"]}]
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./test/**/*.js", "./webpack/**/*.js"]}],
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
