--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "ES6 TDD starter kit with Webpack, Babel, ESLint, Testem, Tape, jsdom and Istanbul",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "testBuildBrowser": "node_modules/.bin/webpack --config webpack/test.browser",
+    "testBuildNode": "node_modules/.bin/webpack --config webpack/test.node",
+    "test": "npm run testBuildNode && tape dist/jsdom.environment.js | tap-spec",
+    "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
+    "debug": "npm run testBuildNode && node --nolazy --inspect-brk=5858 dist/jsdom.environment.js",
     "devBuild": "node_modules/.bin/webpack --config webpack/dev",
     "devWatch": "npm run devBuild -- --watch",
     "devStart": "node_modules/.bin/webpack-dev-server --config webpack/dev --open",
-    "proBuild": "node_modules/.bin/webpack --config webpack/prod",
+    "prodBuild": "node_modules/.bin/webpack --config webpack/prod",
     "lint": "node_modules/.bin/prettier-eslint \"*/**/*.js\" --log-level info",
     "lintFix": "node_modules/.bin/prettier-eslint  \"*/**/*.js\" --write --log-level warn"
   },
@@ -41,6 +45,7 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
     "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
@@ -48,10 +53,14 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.0.6",
+    "jsdom": "^11.6.2",
     "prettier-eslint-cli": "^4.7.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.9.0",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.6.0"
   }
 }
