new/change eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,9 @@
     "no-var": "off",
     "quotes": ["error", "double"],
     "prefer-arrow-callback": [ "error", { "allowNamedFunctions": true } ],
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./test/**/*.js", "./webpack/**/*.js"]}],
-    "no-param-reassign": ["error", { "props": false }]
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./bin/**/*", "./test/**/*.js", "./webpack/**/*.js"]}],
+    "no-param-reassign": ["error", { "props": false }],
+    "no-use-before-define":"off",
+    "strict":"off"
   }
 }
