add coverage / change to ES6 testing

--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "testBuildBrowser": "node_modules/.bin/webpack --config webpack/test.browser",
     "testBuildNode": "node_modules/.bin/webpack --config webpack/test.node",
-    "test": "npm run testBuildNode && tape dist/jsdom.environment.js | tap-spec",
+    "testNodeBundle": "npm run testBuildNode && tape dist/jsdom.environment.js dist/app.bundle.js | tap-spec",
+    "test": "tape --require esm test/jsdom.environment.js test/{,**/}/*.test.js | tap-spec",
     "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
-    "debug": "npm run testBuildNode && node --nolazy --inspect-brk=5858 dist/jsdom.environment.js",
+    "debug": "node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/{,**/}/*.test.js",
     "devBuild": "node_modules/.bin/webpack --config webpack/dev",
     "devWatch": "npm run devBuild -- --watch",
     "devStart": "node_modules/.bin/webpack-dev-server --config webpack/dev --open",
     "prodBuild": "node_modules/.bin/webpack --config webpack/prod",
     "lint": "node_modules/.bin/prettier-eslint \"*/**/*.js\" --log-level info",
-    "lintFix": "node_modules/.bin/prettier-eslint  \"*/**/*.js\" --write --log-level warn"
+    "lintFix": "node_modules/.bin/prettier-eslint  \"*/**/*.js\" --write --log-level warn",
+    "coverage": "node_modules/nyc/bin/nyc.js --require esm --reporter=html tape test/jsdom.environment.js test/{,**/}/*.test.js | tap-spec && ./bin/opn-cli coverage/index.html -- chrome"
   },
   "repository": {
     "type": "git",
@@ -52,8 +54,13 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "esm": "^3.0.27",
     "html-webpack-plugin": "^3.0.6",
     "jsdom": "^11.6.2",
+    "minimist": "^1.2.0",
+    "nyc": "^11.7.1",
+    "opn": "^5.3.0",
+    "opn-cli": "^3.1.0",
     "prettier-eslint-cli": "^4.7.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.9.0",
