--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "testNodeBundle": "npm run testBuildNode && tape dist/jsdom.environment.js dist/app.bundle.js | tap-spec",
     "test": "tape --require esm test/jsdom.environment.js test/{,**/}/*.test.js | tap-spec",
     "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
+    "testem": "testem -f testem.node.json",
     "debug": "node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/{,**/}/*.test.js",
     "devBuild": "node_modules/.bin/webpack --config webpack/dev",
     "devWatch": "npm run devBuild -- --watch",
@@ -64,6 +65,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.9.0",
+    "testem": "^2.7.0",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
