--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,15 @@
   "configurations": [
     {
       "type": "node",
+      "request": "attach",
+      "name": "Attach to Remote",
+      "address": "localhost",
+      "port": 5858,
+      "localRoot": "${workspaceFolder}",
+      "remoteRoot": "${command:extension.vscode-wsl-workspaceFolder}"
+    },
+    {
+      "type": "node",
       "request": "launch",
       "name": "Launch via NPM",
       "useWSL": true,
