move unit tests to subfolder

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "testBuildBrowser": "node_modules/.bin/webpack --config webpack/test.browser",
     "testBuildNode": "node_modules/.bin/webpack --config webpack/test.node",
     "testNodeBundle": "npm run testBuildNode && node_modules/.bin/tape dist/jsdom.environment.js dist/app.bundle.js | tap-spec",
-    "test": "node_modules/.bin/tape --require esm test/jsdom.environment.js test/{,**/}/*.test.js | tap-spec",
+    "test": "node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js | tap-spec",
     "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
     "testem": "node_modules/.bin/testem -f testem.node.json",
-    "debug": "node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/{,**/}/*.test.js",
+    "debug": "node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js",
     "devBuild": "node_modules/.bin/webpack --config webpack/dev",
     "devWatch": "npm run devBuild -- --watch",
     "devStart": "node_modules/.bin/webpack-dev-server --config webpack/dev --open",
