chore: update webpack-dev-server npm package v2.11.2

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "testem": "^2.9.3",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1",
+    "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   }
