--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "testBuildBrowser": "node_modules/.bin/webpack --config webpack/test.browser",
     "testBuildNode": "node_modules/.bin/webpack --config webpack/test.node",
-    "testNodeBundle": "npm run testBuildNode && node_modules/.bin/tape dist/jsdom.environment.js dist/app.bundle.js | tap-spec",
-    "test": "node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js | tap-spec",
+    "testNodeBundle": "npm run testBuildNode && node_modules/.bin/tape dist/jsdom.environment.js dist/app.bundle.js | node_modules/.bin/tap-spec",
+    "test": "NODE_ENV=development node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js | node_modules/.bin/tap-spec",
     "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
     "testem": "node_modules/.bin/testem -f testem.node.json",
     "debug": "node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js",
@@ -36,7 +36,7 @@
     "Istanbul",
     "ESLint"
   ],
-  "author": "Leo Furze-Waddock <leo@furze-waddock.com",
+  "author": "Leo Furze-Waddock <leo@furze-waddock.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lfurzewaddock/js-tdd-kit/issues"
