--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=development node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js | node_modules/.bin/tap-spec",
     "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
     "testem": "node_modules/.bin/testem -f testem.node.json",
-    "debug": "node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js",
+    "debug": "NODE_ENV=debug node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js",
     "devBuild": "node_modules/.bin/webpack --config webpack/dev",
     "devWatch": "npm run devBuild -- --watch",
     "devStart": "node_modules/.bin/webpack-dev-server --config webpack/dev --open",
