chore: upgrade to webpack v4

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "ES6 TDD starter kit with Webpack, Babel, ESLint, Testem, Tape, jsdom and Istanbul",
   "main": "index.js",
   "scripts": {
-    "testBuildBrowser": "node_modules/.bin/webpack --config webpack/test.browser",
-    "testBuildNode": "node_modules/.bin/webpack --config webpack/test.node",
+    "testBuildBrowser": "node_modules/.bin/webpack --mode development --config webpack/test.browser",
+    "testBuildNode": "node_modules/.bin/webpack --mode development --config webpack/test.node",
     "testNodeBundle": "npm run testBuildNode && node_modules/.bin/tape dist/jsdom.environment.js dist/app.bundle.js | node_modules/.bin/tap-spec",
     "test": "NODE_ENV=development node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js | node_modules/.bin/tap-spec",
-    "testStart": "node_modules/.bin/webpack-dev-server --config webpack/test.browser --open",
+    "testStart": "node_modules/.bin/webpack-dev-server --mode development --config webpack/test.browser --open",
     "testem": "node_modules/.bin/testem -f testem.node.json",
     "debug": "NODE_ENV=debug node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js",
-    "devBuild": "node_modules/.bin/webpack --config webpack/dev",
+    "devBuild": "node_modules/.bin/webpack --mode development --config webpack/dev",
     "devWatch": "npm run devBuild -- --watch",
-    "devStart": "node_modules/.bin/webpack-dev-server --config webpack/dev --open",
-    "prodBuild": "node_modules/.bin/webpack --config webpack/prod",
+    "devStart": "node_modules/.bin/webpack-dev-server --mode development --config webpack/dev --open",
+    "prodBuild": "node_modules/.bin/webpack --mode production --config webpack/prod",
     "lint": "node_modules/.bin/prettier-eslint \"*/**/*.js\" --log-level info",
     "lintFix": "node_modules/.bin/prettier-eslint  \"*/**/*.js\" --write --log-level warn",
     "coverage": "NODE_ENV=development node_modules/nyc/bin/nyc.js --require esm npm test",
@@ -66,9 +66,9 @@
     "tap-spec": "^4.1.2",
     "tape": "^4.9.1",
     "testem": "^2.12.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "^2.11.3",
+    "webpack": "^4.20.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
   }
