chore: upgrade to babel v7

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,19 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions", "ie >= 8"]
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [
+            "last 2 versions",
+            "ie >= 8"
+          ]
+        }
       }
-    }]
+    ]
   ],
   "plugins": [
     "add-module-exports",
-    "transform-es2015-modules-umd"
+    "@babel/plugin-transform-modules-umd"
   ]
 }
