--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "testBuildBrowser": "node_modules/.bin/webpack --mode development --config webpack/test.browser",
     "testBuildNode": "node_modules/.bin/webpack --mode development --config webpack/test.node",
     "testNodeBundle": "npm run testBuildNode && node_modules/.bin/tape dist/jsdom.environment.js dist/app.bundle.js | node_modules/.bin/tap-spec",
-    "test": "NODE_ENV=development node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js | node_modules/.bin/tap-spec",
+    "test": "NODE_ENV=development node_modules/.bin/tape --require @babel/register test/jsdom.environment.js test/unit/{,**/}/*.test.js | node_modules/.bin/tap-spec",
     "testStart": "node_modules/.bin/webpack-dev-server --mode development --config webpack/test.browser --open",
     "testem": "node_modules/.bin/testem -f testem.node.json",
     "debug": "NODE_ENV=debug node --nolazy --inspect-brk=5858 node_modules/.bin/tape --require esm test/jsdom.environment.js test/unit/{,**/}/*.test.js",
@@ -17,7 +17,7 @@
     "prodBuild": "node_modules/.bin/webpack --mode production --config webpack/prod",
     "lint": "node_modules/.bin/prettier-eslint \"*/**/*.js\" --log-level info",
     "lintFix": "node_modules/.bin/prettier-eslint  \"*/**/*.js\" --write --log-level warn",
-    "coverage": "NODE_ENV=development node_modules/nyc/bin/nyc.js --require esm npm test",
+    "coverage": "node_modules/nyc/bin/nyc.js npm test",
     "coverReport": "npm run coverage && node_modules/nyc/bin/nyc.js report --reporter=html && ./bin/opn-cli coverage/index.html -- chrome"
   },
   "repository": {
@@ -46,6 +46,7 @@
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-umd": "^7.2.0",
     "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "clean-webpack-plugin": "^1.0.1",
@@ -60,7 +61,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jsdom": "^13.2.0",
     "minimist": "^1.2.0",
-    "nyc": "^13.3.0",
+    "nyc": "^14.1.1",
     "opn": "^5.5.0",
     "prettier-eslint-cli": "^4.7.1",
     "tap-spec": "^5.0.0",
