fix: prettier & eslint coexistance

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "devWatch": "npm run devBuild -- --watch",
     "devStart": "node_modules/.bin/webpack-dev-server --mode development --config webpack/dev --open",
     "prodBuild": "node_modules/.bin/webpack --mode production --config webpack/prod",
-    "lint": "node_modules/.bin/prettier-eslint \"*/**/*.js\" --log-level info",
-    "lintFix": "node_modules/.bin/prettier-eslint  \"*/**/*.js\" --write --log-level warn",
+    "lint": "node_modules/.bin/eslint \"*/**/*.js\"",
+    "lintFix": "node_modules/.bin/eslint \"*/**/*.js\" --fix",
     "coverage": "node_modules/nyc/bin/nyc.js npm test",
     "coverReport": "npm run coverage && node_modules/nyc/bin/nyc.js report --reporter=html && ./bin/opn-cli coverage/index.html -- chrome"
   },
@@ -51,11 +51,13 @@
     "babel-plugin-add-module-exports": "^1.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "esm": "^3.2.25",
     "html-webpack-plugin": "^3.2.0",
@@ -63,7 +65,7 @@
     "minimist": "^1.2.0",
     "nyc": "^14.1.1",
     "opn": "^5.5.0",
-    "prettier-eslint-cli": "^4.7.1",
+    "prettier": "^1.18.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.11.0",
     "testem": "^2.17.0",
