--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,23 @@
 {
-  "extends": "airbnb",
+  "extends": ["airbnb", "prettier"],
   "env": {
     "browser": true,
     "node": true
   },
+  "plugins": ["prettier"],
   "rules": {
     "no-var": "off",
     "quotes": ["error", "double"],
-    "prefer-arrow-callback": [ "error", { "allowNamedFunctions": true } ],
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./bin/**/*", "./test/**/*.js", "./webpack/**/*.js"]}],
+    "prefer-arrow-callback": ["error", { "allowNamedFunctions": true }],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": ["./bin/**/*", "./test/**/*.js", "./webpack/**/*.js"]
+      }
+    ],
     "no-param-reassign": ["error", { "props": false }],
-    "no-use-before-define":"off",
-    "strict":"off"
+    "no-use-before-define": "off",
+    "strict": "off",
+    "prettier/prettier": ["error"]
   }
 }
